# neuron-main

./: .gitignore  CMakeLists.txt  default_plugins.json
cmake/: aarch64-linux-gnu.cmake  arm-linux-gnueabihf.cmake
docs/: cm4_arm64_build.md  mqtt_aggregate_plugin_dev.md  rk3506_armhf_build.md  rk3506_one_command_deploy.md
include/neuron/: errcodes.h
include/neuron/connection/: neu_connection.h
persistence/: 0114_2.14.0_modbus_simulator.sql
plugins/ekuiper/: CMakeLists.txt
plugins/modbus/: modbus_point.c
plugins/monitor/: CMakeLists.txt
plugins/mqtt/: CMakeLists.txt  mqtt-aggregate.json  mqtt-auth.json  mqtt.json  mqtt_aggregate.c  mqtt_aggregate.h  mqtt_aggregate_plugin.c  mqtt_auth.c  mqtt_auth.h  mqtt_auth_plugin.c  mqtt_config.c  mqtt_config.h  mqtt_handle.c  mqtt_plugin.c  mqtt_plugin.h  mqtt_plugin_intf.c
plugins/restful/: adapter_handle.c
scripts/: apply_rk3506_armhf_patch.sh  bootstrap_rk3506_from_git.sh  build_deploy_start_rk3506.sh  deploy_rk3506_release_bundle.sh  install_official_neuron_nanomq_rk3506.sh  install_rk3506_release_on_target.sh  make_rk3506_release_bundle.sh  package_rk3506_bundle.sh
simulator/: modbus_simulator.c  modbus_tcp_simulator.c
src/: main.c
src/core/: node_manager.c
src/parser/: neu_json_global_config.c  neu_json_global_config.h
tests/ft/app/: test_apps_export_import.py
tests/ft/neuron/: error.py
tests/ft/node/: test_node_tag.py
